--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,10 @@ ttkbootstrap==1.10.1
 typeguard==4.4.2
 typing==3.7.4.3
 typing_extensions==4.13.0
+threading
+webbrowser
+scikit-learn
+graphviz
 tzdata==2025.2
 urllib3==2.3.0
 Werkzeug==3.1.3
